--- a/src/components/Appointments/index.css
+++ b/src/components/Appointments/index.css
@@ -1,1 +1,15 @@
 /* Write your CSS here */
+.main-container {
+  background-image: linear-gradient(to bottom, #9796f0, #fbc7d4);
+  min-height: 100vh;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.display-container {
+  width: 90%;
+  background-color: white;
+  border-radius: 10px;
+  min-height: 60vh;
+}
