--- a/src/components/AppointmentItem/index.css
+++ b/src/components/AppointmentItem/index.css
@@ -5,6 +5,7 @@
   border: 2px solid #b5b7c4;
   width: 30%;
   border-radius: 20px;
+  margin-top: 20px;
   margin-right: 20px;
 }
 .stared-isTrue {
